# lambda-zkevm-poc

./: .gitignore  Cargo.toml  README.md  download_setup.sh
contracts/Calculation/: Calculation.sol  new_calculation.json
contracts/Circom/: CircomVerifier.sol  new_circom.json
contracts/groth16/: Groth16Verifier.sol
contracts/plonkish/: PlonkishVerifier.yul
data/: basic-token.code  circom-verifier.code  plonkish-verifier.code
src/: gen.rs  lib.rs  main.rs  main1.rs  node.rs  run.rs
src/cli/: command.rs  exec.rs  main.rs  mod.rs
src/cli/exec/: dry_run.rs  run.rs
src/dry-run/: dummy.rs  error.rs  lib.rs
src/dry_run/: bytecode_run.rs  dummy.rs  mod.rs
src/run/: builder.rs  circuit.rs  mod.rs  proof.rs  rpc.rs
src/run/rpc/: params.rs
