[package]
name = "lambda-zkevm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda-zkevm"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
env_logger = "0.9"
rand_core = "0.6.4"
hex = "0.4.3"
clap = "4.3"
anyhow = "1.0"
thiserror = "1.0"
revm-interpreter = "1.1.2"
revm-primitives = "1.1.2"

[features]
super = []
