[package]
name = "lambda-zkevm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda-zkevm"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
env_logger = "0.9"
rand_core = "0.6.4"
hex = "0.4.3"
clap = { version = "=4.2.1", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
revm-interpreter = "1.1.2"
revm-primitives = "1.1.2"
chrono = "0.4.23"

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", rev = "cd69884", default-features = false, features = [
	"parallel_syn",
	"scroll",
	"shanghai",
] }
glob = "0.3.0"
log4rs = { version = "1.2.0", default_features = false, features = [
	"console_appender",
	"file_appender",
] }
rand = "0.8"

[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v0.17.0" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
halo2wrong = { git = "https://github.com/scroll-tech/halo2wrong.git", branch = "halo2-ecc-snark-verifier-0323" }
maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[features]
super = []
